--- a/What We Do.css
+++ b/What We Do.css
@@ -31,7 +31,7 @@ font-size: 25px;
 }
 .world{
     margin-left: 1655px;
-    margin-top: -37px;
+    margin-top: -36px;
     font-size: 30px;
 }
 .globelogo{
@@ -45,9 +45,10 @@ font-size: 25px;
     margin-top: -31.4px;
     font-size: 27px;
 }
+
 .menu-bar{
     margin-top: 0%;
-    margin-left: 0%;
+    margin-left:0%;
     margin-right: 2%;
     text-decoration: white;
     width: 100%;
@@ -61,6 +62,8 @@ font-size: 25px;
   list-style: none;
   color: #fff;
   gap:0.97vw;
+ 
+  
   }
   .menu-bar ul li{
   width: 8.21vw;
@@ -198,17 +201,16 @@ z-index:1;
 
 
 .what {
-    margin-left:-5%;
      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 1.3rem;
      font-weight: bold;
   top: -100px;
- margin-top: -35%;
+ 
     
      /* width: 150%; */
 }
 .Whos{
-    margin-top: -35%;
+    margin-top: -34%;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3rem;
     font-weight: bold;
@@ -218,17 +220,17 @@ z-index:1;
     font-size: 21px;
     font-weight: bold;
      
-    margin-top: -35%;
+    margin-top: -34%;
 }
 .Insights{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 21px;
      font-weight: bold;
      margin-left: -21px;
-     margin-top: -35%;
+     margin-top: -34%;
 }
 .getin{
-   margin-top: -35%;
+   margin-top: -34%;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 21px;
    font-weight: bold;
@@ -242,14 +244,13 @@ z-index:1;
    
     text-align: center;
     margin-left: -81.4vw;
-    margin-top: 20px;
+    margin-top: 19px;
 }
 .gg{
-    margin-left: 38vw;
-    margin-top: -368px;
+    margin-left: 37vw;
+    margin-top: -376px;
     margin-bottom: -20px;
-width: 0%;
-font-size: 25px;
+font-size: 30px;
 text-decoration: none;
 color: #fff;
 }
@@ -274,13 +275,13 @@ color: #fff;
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:50vw;
+    height:98.1vh;
   }
   .aboutt{
-    margin-left: 150px;
+    margin-left: 106px;
     color: rgb(247, 244, 244);
-    margin-top: 220px;
-    font-size: 48px;
+    margin-top: -1px;
+    font-size: 4vw;
     font-family: sans-serif;
     font-weight: bold;
     width: 300%;
@@ -289,48 +290,55 @@ color: #fff;
     display: flex;
   }
   .p1{
-    margin-top: 310px;
-    margin-left: -370px;
-    font-size: 40px;
+    margin-top: 150px;
+    margin-left: -350px;
+    font-size: 70px;
     font-family: sans-serif;
    width: 650%;
     color: rgb(211, 167, 167);
   }
   .p2{
-    margin-top: 480px;
-    margin-left: -770px;
+    margin-top: 560px;
+    margin-left: -1000px;
     font-size: 25px;
     font-family: sans-serif;
    width: 800%;
     color: rgb(211, 167, 167);
   }
+  .p3{
+    margin-top:270px;
+    margin-left:-1023px;
+    font-size:70px;
+    color: rgb(211, 167, 167);
+    font-family: sans-serif;
+  }
   
   .let{
     font-size: 120px;
-    margin-top: -120px;
+    margin-top: -50px;
   }
   .circle {
-    width: 280px;
-    height: 280px;
+    width: 400px;
+    height: 400px;
     line-height: 500px;
     border-radius: 50%;
-    margin-top: 200px;
-    margin-left: 10px;
+    margin-top: 160px;
+    margin-left: 439px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
   }
   .lets{
     font-size: 120px;
-    margin-top: -120px;
+    margin-top: -50px;
   }
   .circle2 {
-    width: 280px;
-    height: 280px;
+    width: 400px;
+    height: 400px;
     line-height: 500px;
     border-radius: 50%;
-    margin-top: 390px;
-    margin-left: -265px;
+    margin-top: 450px;
+    margin-left: -405px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
@@ -348,76 +356,81 @@ color: #fff;
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:48vw;
+    height:86.1vh;
   }
   .pp1{
-    margin-top: 120px;
+    margin-top: 30px;
     margin-left: 30px;
-    font-size: 45px;
+    font-size: 70px;
     font-weight: bold;
     font-family: sans-serif;
     width: 550%;
   }
   .pp2{
     margin-top: 300px;
-    margin-left: -1055px;
+    margin-left: -1080px;
     margin-right: 330px;
-    font-size: 18px;
+    font-size: 19px;
     font-family: sans-serif;
     width: 465%;
+    line-height:30px;
   }
   .pp3{
-    margin-top: 430px;
-    margin-left: -1210px;
+    margin-top: 438px;
+    margin-left: -1275px;
     margin-right: 500px;
-    font-size: 18px;
+    font-size: 19px;
     font-family: sans-serif;
     width: 435%;
+    line-height:30px;
   }
   .pp4{
-    margin-top: 558px;
-    margin-left: -1330px;
+    margin-top: 575px;
+    margin-left: -1380px;
     margin-right: 115px;
-    font-size: 18px;
+    font-size: 19px;
     font-family: sans-serif;
     width: 450%;
+    line-height:30px;
   }
   .img1{
-    margin-top: 150px;
+    margin-top: 60px;
     margin-left: -350px;
     margin-right: 230px;
+    
   }
   .img2{
-    margin-top: 200px;
-    margin-right: 220px;
-    margin-left: -300px;
+    margin-top: 109px;
+    margin-right: 80px;
+    margin-left: -260px;
     width: 30%;
   }
   .img3{
     margin-top: 420px;
-    margin-left: -290px;
+    margin-left: -210px;
     margin-right: 290px;
   }
   .circle3 {
-    width: 130%;
-    height: 200px;
+    width: 160%;
+    height: 320px;
     line-height: 50px;
     border-radius: 50%;
-    margin-top: 400px;
-   margin-right: 100px;
+    margin-top: 350px;
+   margin-right: -8px;
+   margin-left:115px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
   }
   .let1{
-    font-size: 25px;
-    margin-top: 70px;
+    font-size: 35px;
+    margin-top: 150px;
     margin-left: -50px;
    font-weight: bold;
   }
   .pp{
-    margin-top: -20px;
-    font-size: 25px;
+    margin-top: 5px;
+    font-size: 35px;
     margin-left: -62px;
     font-weight: bold;
   }
@@ -426,66 +439,492 @@ color: #fff;
   }
 
 
+.container3{
+  height:86.1vh;
+    background-color:lightgreen;
+}
 
-
-  .container3{
-    position: cover;
-    background-size: auto;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    margin-left: auto;
-  margin-right: auto;
-    height:30vw;
-  }
+  
   .para{
     display: flex;
   }
   .treeimg{
    
-    margin-top: 105px;
-    margin-left: 480px;
+    margin-top: 60px;
+    margin-left: 570px;
+    
   }
-  .footer{
-    background-color:#746e7d;
-    height:68px;
-    margin-top:605px;
-    margin-left: -1000px;
+  .container4{
+    height: 88vh;
     display: flex;
-    width: 106%;
+    background-image:url(ppc4.PNG);
+      position: cover;
+      background-size: auto;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
   }
-  .fp{
+  .hh{
+    height: 6vh;
+    background-color: #c0b9b9;
+    width: 100%;
+    z-index: 0;
+  }
+  .hp{
+    margin-top: 0.8%;
+    text-align: center;
+    font-size: 25px;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+  .h1{
+    margin-top: -430px;
+    margin-left: 260px;
+    font-size: 95px;
+    color:white;
+    
+  }
+  .h2{
+    margin-top: -118px;
+    margin-left: 1235px;
+    font-size: 95px;
+  }
+  
+  .circle5{
+    width: 3vw;
+    height: 6vh;
+    -webkit-border-radius:3vw;
+    -moz-border-radius:3vw;
+    border-radius:3vw;
+    border-width:0.2vw;
+    border-style:solid;
+    border-color:blue;
+    margin-left: 335px;
+    margin-top: 120px;
+  }
+  .arrow{
+    margin-left:30vw;
+    margin-top:-0.7vh;
+    font-size:2.9vw;
+  }
+  .container5{
+    background-color:lightblue;
+    height:80.2vh;
+    margin-top:-753.5px;
+  }
+  .img4{
+margin-left:0px;
+  }
+  .img5{
+margin-left:951.9px;
+margin-top:-740px;
+  }
+  
+  .container6{
+    height: 84vh;
+    display: flex;
+    background-image:url(ppc5.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-top: 4vh;
+  }
+  
+  .leta{
+    font-size: 70px;
+    margin-top: -195px;
+  }
+  .circlea {
+    width: 120px;
+    height: 120px;
+    line-height: 500px;
+    border-radius: 50%;
+    margin-top: 90px;
+    margin-left: -1620px;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  }
+  .letb{
+    font-size: 70px;
+    margin-top: -192px;
+  }
+  .circleb {
+    width: 120px;
+    height: 120px;
+    line-height: 500px;
+    border-radius: 50%;
+    margin-top: 320px;
+    margin-left: -120px;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+    border: black;
+  }
+  .getparagraph{
+    display: flex;
+  }
+  .getp{
+    width: 28vw;
+    text-align: justify;
+    margin-left: 150px;
+    margin-top: 50px;
+    font-family: sans-serif;
+    font-size: 22px;
+  }
+  
+  .box1{
+    margin-left: 70px;
+    margin-top:50px;
+    font-size: 17px;
+    z-index:0;
+    padding-top:-190px;
+  }
+  .man{
+    margin-left:20px;
+    font-family: sans-serif;
+  }
+  .hm{
+    text-decoration:none;
     color:black;
-    text-align:center;
     font-weight:normal;
-    padding-top:26px;
-    margin-left: -30px;
-    font-size: 20px;
-    margin-right: 120px;
+    margin-left:20px;
+    padding-top:0px;
+    font-family: sans-serif;
   }
-  .imgft{
-   margin-top: 7px;
-   margin-left: 30px;
+  .ab{
+    font-weight:normal;
+    margin-left:20px;
+    margin-top: -7px;
+    font-family: sans-serif;
+    width:100px
   }
-  .link{
-    margin-top: 18px;
-    margin-left: 270px;
+  .ind1{
+    font-weight:normal;
+    margin-left:20px;
+    margin-top: -12px;
+    font-family: sans-serif;
   }
-  .fc{
-    margin-left: -490px;
-    margin-top: 18px;
+  .tech{
+    font-weight:normal;
+    margin-left:20px;
+   margin-top: -12px;
+   font-family: sans-serif;
   }
-  .you{
-    margin-left:2px;
-    margin-top: 20px;
+  .place{
+    font-weight:normal;
+    margin-left:20px;
+    margin-top: -12px;
+    font-family: sans-serif;
+  }
+  .enr{
+    font-weight:normal;
+   margin-top: -10px;
+    margin-left:20px;
+    font-family: sans-serif;
    
   }
-  .ggl{
-    margin-top: 20px;
-    margin-left: 24px;
+  .car{
+   margin-left: 18px;
+   margin-top: 8px;
+   font-family: sans-serif;
   }
-  .insta{
-    margin-top: 18px;
+  .newe{
+    margin-left: 20px;
+    margin-top: 8px;
+    font-family: sans-serif;
+    width: 200px;
+  }
+  .box2{
+   display: flex;
+   margin-left: 98px;
+   margin-top: 50px;
+   font-size: 17px;
+  }
+  .service{
+    margin-left: -80px;
+    font-family: sans-serif;
+  }
+  .eds{
+    font-weight:normal;
+    font-family: sans-serif;
+    margin-top: 38px;
+    margin-left: -68px;
+    width: 25vw;
+  
+  }
+  .ind{
+    font-weight:normal;
+    font-family: sans-serif;
+    margin-top: 70px;
+    margin-left: -382px;
+    width: 25vw;
+  }
+  .desig{
+    font-weight:normal;
+    font-family: sans-serif;
+    margin-left: -382px;
+    margin-top: 100px;
+    width: 25vw;
+  }
+  .erp{
+    font-weight:normal;
+    font-family: sans-serif;
+    width: 25vw;
+    margin-top: 130px;
+    margin-left: -383px;
+  }
+  .angular{
+    font-weight:normal;
+    font-family: sans-serif;
+    margin-top: 157px;
+    margin-left: -385px;
+    width: 25vw;
+  }
+  .parmanent{
+    font-weight:normal;
+    font-family: sans-serif;
+    width: 25vw;
+    margin-top: 185px;
+    margin-left: -385px;
+  }
+  .contractab{
+    font-weight:normal;
+    font-family: sans-serif;
+    margin-top: 212px;
+    margin-left: -383px;
+    width: 25vw;
+  }
+  .contractus{
+    font-weight:normal;
+    font-family: sans-serif;
+    margin-top: 240px;
+    margin-left: -380px;
+    width: 25vw;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  .box3{
+  display: flex;
+  }
+  
+  .mb{
+    margin-top: 90px;
+    margin-left: -290px;
+    width: 400px;
+    color: #fff;
+    font-family: sans-serif;
+  }
+  .con{
+    margin-top: 50px;
+    margin-left: -48px;
+    width: 100%;
+    color: #fff;
+    font-size: 20px;
+    font-family: sans-serif;
+  }
+  .em{
+    margin-top: 130px;
+    margin-left: -315px;
+    width: 500px;
+    color: #fff;
+    font-family: sans-serif;
+  }
+  
+  
+  .location{
+    display: flex;
+  }
+  
+  .locn{
+  margin-top: 345px;
+  margin-left: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  }
+  .engl{
+    margin-top: 380px;
+    margin-left: -140px;
+  }
+  
+  .manjira{
+    margin-top: 400px;
+    margin-left: -280px;
+  }
+  .floor{
+    margin-top: 420px;
+    margin-left: -220px;
+  }
+  .kphb{
+    margin-top: 439px;
     margin-left: -160px;
   }
+  
+  .tn{
+    display: flex;
+  }
+  .engltn{
+    margin-top: 480px;
+    margin-left: -224px;
+  }
+  
+  .manjiratn{
+    margin-top: 500px;
+    margin-left: -270px;
+  }
+  .floortn{
+    margin-top: 520px;
+    margin-left: -220px;
+  }
+  .kphbtn{
+    margin-top: 539px;
+    margin-left: -160px;
+  }
+  .pune{
+    display: flex;
+  }
+  .englpn{
+    margin-top: 380px;
+    margin-left: 275px;
+  }
+  
+  .manjirapn{
+    margin-top: 400px;
+    margin-left: -260px;
+  }
+  .floorpn{
+    margin-top: 420px;
+    margin-left: -195px;
+  }
+  .kphbpn{
+    margin-top: 439px;
+    margin-left: -160px;
+  }
+  .eur{
+    display: flex;
+  }
+  .engleu{
+    margin-top: 480px;
+    margin-left: -250px;
+  }
+  
+  .manjiraeu{
+    margin-top: 500px;
+    margin-left: -250px;
+  }
+  .flooreu{
+    margin-top: 520px;
+    margin-left: -220px;
+  }
+  .kphbeu{
+    margin-top: 539px;
+    margin-left: -160px;
+  }
+  .bng{
+    display: flex;
+  }
+  .englbng{
+    margin-top: 380px;
+    margin-left: 220px;
+  }
+  
+  .manjirabng{
+    margin-top: 400px;
+    margin-left: -280px;
+  }
+  .floorbng{
+    margin-top: 420px;
+    margin-left: -265px;
+  }
+  .kphbbng{
+    margin-top: 439px;
+    margin-left: -154px;
+  }
+  .srl{
+    display: flex;
+  }
+  .englsrl{
+    margin-top: 480px;
+    margin-left: -168px;
+  }
+  
+  .manjirasrl{
+    margin-top: 500px;
+    margin-left: -225px;
+  }
+  .floorsrl{
+    margin-top: 520px;
+    margin-left: -220px;
+  }
+  .kphbsrl{
+    margin-top: 539px;
+    margin-left: -160px;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+    .footer{
+      height: 50px;
+      margin-top: 0px;
+      display: flex;
+      background-color: bisque;
+    }
+    .fp{
+      margin-top: 18px;
+     margin-left: 1.5%;
+     font-size: 20px;
+    }
+    .fc{
+      margin-left: 69%;
+      margin-top:10px ;
+    }
+    .eimg{
+      margin-left: -90%;
+      margin-top: 6px;
+    }
+    .lin{
+      margin-top: 5px;
+      margin-left: 200px;
+    }
+    .face{
+      margin-top: 5px;
+     margin-left: 0.6%;
+    }
+    .inst{
+      margin-top: 5px;
+     margin-left: 0.9%;
+    }
+    .gm{
+      margin-top: 5px;
+      margin-left: -36%;
+    }
+    .uu{
+      margin-top: 5px;
+      margin-left: -0.5%;
+    }
+  
+  
+  
