--- a/services1.css
+++ b/services1.css
@@ -19,25 +19,25 @@
   }
   .ne{
   text-decoration: none;
-  margin-left:10.2vw;
-  margin-top: -3.65vh;
+  margin-left:9.4vw;
+  margin-top: -3.35vh;
   font-size: 25px;
   }
   .In{
   text-decoration: none;
-  margin-left: 23vw;
-  margin-top: -2.45vh;
+  margin-left: 22vw;
+  margin-top: -2.35vh;
   font-size: 25px;
   }
   .world{
     margin-left: 1655px;
-    margin-top: -38px;
+    margin-top: -36px;
     font-size: 30px;
   }
   .globelogo{
     margin-left: 1620px;
     top: 0;
-    margin-top: -29.5px;
+    margin-top: -30.8px;
     font-size: 32px;
   }
   .searchlogo{
@@ -53,8 +53,8 @@
   }
   .dot2{
   font-size: 10px;
-  margin-left: 165px;
-  margin-top: -17px;
+  margin-left: 167px;
+  margin-top: -18px;
   }
   
   
@@ -89,7 +89,7 @@
   .menu-bar ul li a
   {
   text-decoration: none;
-  color:#69666c;
+  color:black;
   }
   .active, .menu-bar ul li
   {
@@ -212,17 +212,17 @@
   z-index:1;
   }
   .what {
-    margin-left:-6.33%;
+    margin-left:-6.55%;
      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 1.3rem;
      font-weight: bold;
   top: -100px;
-  margin-top: -3.5%;
+  margin-top: -3.7%;
    
      /* width: 150%; */
   }
   .Whos{
-    margin-top: -3.5%;
+    margin-top: -3.7%;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3rem;
     font-weight: bold;
@@ -232,17 +232,17 @@
     font-size: 21px;
     font-weight: bold;
      
-    margin-top: -3.5%;
+    margin-top: -3.7%;
   }
   .Insights{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 21px;
      font-weight: bold;
      margin-left: -21px;
-     margin-top: -3.5%;
+     margin-top: -3.7%;
   }
   .getin{
-   margin-top: -3.5%;
+   margin-top: -3.7%;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 21px;
    font-weight: bold;
@@ -259,10 +259,10 @@
    
     text-align: center;
     margin-left: -81.5vw;
-    margin-top: 20px;
+    margin-top: 19px;
   }
   .gg{
-    margin-left: 4.1vw;
+    margin-left: 4vw;
     margin-top: 14px;
     margin-bottom: -32px;
   width: 0%;
@@ -331,7 +331,7 @@
   }
   .let{
     font-size: 120px;
-    margin-top: -120px;
+    margin-top: -60px;
   }
   .circle {
     width: 400px;
