--- a/What We Do.css
+++ b/What We Do.css
@@ -410,6 +410,15 @@ color: #fff;
     margin-left: -210px;
     margin-right: 290px;
   }
+  .img6{
+    margin-left:-900px;
+    margin-top:700px;
+  }
+  .vpara{
+    padding-top:700px;
+    margin-left:20px;
+    font-size:30px;
+  }
   .circle3 {
     width: 160%;
     height: 320px;
@@ -450,9 +459,22 @@ color: #fff;
   }
   .treeimg{
    
-    margin-top: 60px;
+    margin-top: 30px;
     margin-left: 570px;
     
+  }
+  .paragraph2{
+    font-weight:bold;
+    margin-top:-570px;
+    margin-left:700px;
+    font-size:60px;
+  }
+
+  .paragraph3{
+    font-weight:bold;
+    margin-top:20px;
+    margin-left:660px;
+    font-size:38px;
   }
   .container4{
     height: 88vh;
@@ -465,17 +487,15 @@ color: #fff;
       background-size: cover;
   }
   .hh{
-    height: 6vh;
+    height: 12vh;
     background-color: #c0b9b9;
     width: 100%;
     z-index: 0;
   }
   .hp{
-    margin-top: 0.8%;
+    
     text-align: center;
-    font-size: 25px;
-    font-family: sans-serif;
-    font-weight: bold;
+    
   }
   .h1{
     margin-top: -430px;
@@ -514,10 +534,11 @@ color: #fff;
   }
   .img4{
 margin-left:0px;
+
   }
   .img5{
 margin-left:951.9px;
-margin-top:-740px;
+margin-top:-741px;
   }
   
   .container6{
@@ -747,136 +768,13 @@ margin-top:-740px;
     color: #fff;
     font-family: sans-serif;
   }
+  .container9{
+    background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
+    height:86.6vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
+}
   
-  
-  .location{
-    display: flex;
-  }
-  
-  .locn{
-  margin-top: 345px;
-  margin-left: 10px;
-  font-size: 30px;
-  font-weight: bold;
-  }
-  .engl{
-    margin-top: 380px;
-    margin-left: -140px;
-  }
-  
-  .manjira{
-    margin-top: 400px;
-    margin-left: -280px;
-  }
-  .floor{
-    margin-top: 420px;
-    margin-left: -220px;
-  }
-  .kphb{
-    margin-top: 439px;
-    margin-left: -160px;
-  }
-  
-  .tn{
-    display: flex;
-  }
-  .engltn{
-    margin-top: 480px;
-    margin-left: -224px;
-  }
-  
-  .manjiratn{
-    margin-top: 500px;
-    margin-left: -270px;
-  }
-  .floortn{
-    margin-top: 520px;
-    margin-left: -220px;
-  }
-  .kphbtn{
-    margin-top: 539px;
-    margin-left: -160px;
-  }
-  .pune{
-    display: flex;
-  }
-  .englpn{
-    margin-top: 380px;
-    margin-left: 275px;
-  }
-  
-  .manjirapn{
-    margin-top: 400px;
-    margin-left: -260px;
-  }
-  .floorpn{
-    margin-top: 420px;
-    margin-left: -195px;
-  }
-  .kphbpn{
-    margin-top: 439px;
-    margin-left: -160px;
-  }
-  .eur{
-    display: flex;
-  }
-  .engleu{
-    margin-top: 480px;
-    margin-left: -250px;
-  }
-  
-  .manjiraeu{
-    margin-top: 500px;
-    margin-left: -250px;
-  }
-  .flooreu{
-    margin-top: 520px;
-    margin-left: -220px;
-  }
-  .kphbeu{
-    margin-top: 539px;
-    margin-left: -160px;
-  }
-  .bng{
-    display: flex;
-  }
-  .englbng{
-    margin-top: 380px;
-    margin-left: 220px;
-  }
-  
-  .manjirabng{
-    margin-top: 400px;
-    margin-left: -280px;
-  }
-  .floorbng{
-    margin-top: 420px;
-    margin-left: -265px;
-  }
-  .kphbbng{
-    margin-top: 439px;
-    margin-left: -154px;
-  }
-  .srl{
-    display: flex;
-  }
-  .englsrl{
-    margin-top: 480px;
-    margin-left: -168px;
-  }
-  
-  .manjirasrl{
-    margin-top: 500px;
-    margin-left: -225px;
-  }
-  .floorsrl{
-    margin-top: 520px;
-    margin-left: -220px;
-  }
-  .kphbsrl{
-    margin-top: 539px;
-    margin-left: -160px;
-  }
   
   
   
@@ -887,8 +785,8 @@ margin-top:-740px;
   
   
     .footer{
-      height: 50px;
-      margin-top: 0px;
+      height: 60px;
+      margin-top: 65px;
       display: flex;
       background-color: bisque;
     }
@@ -898,32 +796,32 @@ margin-top:-740px;
      font-size: 20px;
     }
     .fc{
-      margin-left: 69%;
+      margin-left: 74.5%;
       margin-top:10px ;
     }
     .eimg{
-      margin-left: -90%;
-      margin-top: 6px;
+      margin-left: -93.7%;
+      margin-top: 7px;
     }
     .lin{
-      margin-top: 5px;
-      margin-left: 200px;
+      margin-top: 9.5px;
+      margin-left: 385px;
     }
     .face{
-      margin-top: 5px;
-     margin-left: 0.6%;
+      margin-top: 9.5px;
+     margin-left: 2%;
     }
     .inst{
-      margin-top: 5px;
-     margin-left: 0.9%;
+      margin-top: 9.5px;
+     margin-left: 2.2%;
     }
     .gm{
-      margin-top: 5px;
-      margin-left: -36%;
+      margin-top: 9.5px;
+      margin-left: -27%;
     }
     .uu{
-      margin-top: 5px;
-      margin-left: -0.5%;
+      margin-top: 9.5px;
+      margin-left: 1.6%;
     }
   
   
