--- a/home.css
+++ b/home.css
@@ -21,9 +21,8 @@
 .container4{
     background-image: linear-gradient(to right, rgba(248, 215, 29, 0.904) , rgb(255, 72, 0));
     height:86.3vh;
-    margin-top:-6.6vh;
+    margin-top:-7vh;
     margin-left:-0.4vw;
-    width:99.1vw;
 }
 .container5{
     background-color:lightpink;
@@ -456,17 +455,20 @@ margin-top:0.2vh;
 .item5{
     font-size:1.5vw;
 }
-/* .videopos{
-    margin-top:-20vw;
+.videopos{
+    margin-top:9.5vh;
+    width:360vw;
+    /* height:100vh; */
     
 }
 .vppos{
     z-index:0;
     position:absolute;
-    margin-top:-100vw;
-    color:white;
-    font-size: 13vw;
-    margin-left:80vw;
+    margin-top:39vh;
+    color:black;
+    font-size: 4.5vw;
+    margin-left:22vw;
+    
 }
 .info1{
     animation: rotates 1.6s linear;
@@ -474,7 +476,7 @@ margin-top:0.2vh;
   @keyframes rotates{
     from{transform: translateX(-100vw);}
     to{ transform: translateX(0vw); }
-  } */
+  }
 .ppos2{
     font-weight:bold;
     font-size:35vw;
@@ -568,4 +570,43 @@ border-style:solid;
     margin-left:150vw;
     font-size:5vw;
   } */
-  
+  .footer{
+    height: 60px;
+    margin-top:-9px;
+   
+    display: flex;
+    background-color: bisque;
+  }
+  .fp{
+    margin-top: 18px;
+   margin-left: 1.5%;
+   font-size: 20px;
+  }
+  .fc{
+    margin-left: 74.5%;
+    margin-top:-10px ;
+  }
+  .eimg{
+    margin-left: -93.7%;
+    margin-top: 7px;
+  }
+  .lin{
+    margin-top: 9.5px;
+    margin-left: 385px;
+  }
+  .face{
+    margin-top: 9.5px;
+   margin-left: 2%;
+  }
+  .inst{
+    margin-top: 9.5px;
+   margin-left: 2.2%;
+  }
+  .gm{
+    margin-top: 9.5px;
+    margin-left: -27%;
+  }
+  .uu{
+    margin-top: 9.5px;
+    margin-left: 1.6%;
+  }
